force-app/main/default/objects/featureSwitches__c/featureSwitches__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>featureSwitches</label>
</CustomObject>