force-app/main/default/objects/featureSwitches__c/fields/diableCaseApiCalls__c.field-meta.xml
<CustomField>
    <fullName>diableCaseApiCalls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>diableCaseApiCalls</label>
    <type>Checkbox</type>
</CustomField>