force-app/main/default/objects/featureSwitches__c/fields/disableAccountCalls__c.field-meta.xml
<CustomField>
    <fullName>disableAccountCalls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disableAccountCalls</label>
    <type>Checkbox</type>
</CustomField>