force-app/main/default/objects/featureSwitches__c/fields/disableApiCalls__c.field-meta.xml
<CustomField>
    <fullName>disableApiCalls__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disableApiCalls</label>
    <type>Checkbox</type>
</CustomField>